[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "water-api"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["multipart"] }
axum_typed_multipart = "0.11.1"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = "0.12.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.38.1", features = ["full"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
